--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-federated-module-loader": "^1.0.0",
+    "react-markdown": "^8.0.0",
     "styled-components": "^5.3.3"
   }
 }
