--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-federated-module-loader": "^1.0.0",
     "react-markdown": "^8.0.0",
+    "spinners-react": "^1.0.6",
     "styled-components": "^5.3.3"
   }
 }
